<resources>
    <string name="app_name">To Do List</string>
    <string name="add_task_button">Add Task</string>
    <string name="name_label">Name</string>
    <string name="description_label">Description</string>
    <string name="status_label">Status</string>
    <string name="priority_label">Priority</string>
    <string name="finish_date_label">Finish date</string>
    <string name="finish_time_label">Finish time</string>
    <string name="create_time_label">Create date</string>
    <string name="close_time_label">Close date</string>
    <string name="delete_task_button">Delete task</string>
    <string name="save_task_button">Save changes</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="delete_dialog">Delete task</string>
    <string name="delete_dialog_message">Are you sure you want to delete the task?</string>
    <string name="sort_label">Sort by:</string>
    <string name="attachments_label">Attachments</string>
    <string name="add_attachments_button">Add Attachment</string>
    <string name="delete_attachment">Delete</string>
    <string name="delete_attachment_dialog">Delete attachment</string>
    <string name="delete_attachment_dialog_message">Are you sure you want to delete the attachment?</string>
    <string name="export_button">Export</string>
    <string name="channel_name">todolist_chanel</string>
    <string name="channel_description">todolist_chanel_description</string>
    <string name="notification_name">Task are waiting for you!</string>

    <string-array name="status_array">
        <item>To do</item>
        <item>In progress</item>
        <item>Done</item>
        <item>Blocked</item>
        <item>Rejected</item>
    </string-array>
    <string-array name="priority_array">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </string-array>
    <string-array name="sorting_array">
        <item>Create date ascending</item>
        <item>Priority ascending</item>
        <item>Name ascending</item>
        <item>Status ascending</item>
        <item>Close date ascending</item>
        <item>Finish date ascending</item>
        <item>Create date descending</item>
        <item>Priority descending</item>
        <item>Name descending</item>
        <item>Status descending</item>
        <item>Close date descending</item>
        <item>Finish date descending</item>
    </string-array>
</resources>

