<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:text="@string/name_label"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/name_label" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingBottom="15dp"
        android:password="false" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:text="@string/description_label"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/description_label" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingBottom="10dp"
      android:paddingTop="10dp">

      <TextView
          android:id="@+id/textView2"
          android:layout_width="80dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/priority_label"
          android:textSize="18sp"
          android:textStyle="bold" />

      <Spinner
          android:id="@+id/prioritySpinner"
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:textAlignment="viewEnd" />

  </LinearLayout>

    <LinearLayout
        android:id="@+id/statusLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/statusSpinner"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
      android:id="@+id/dateLinearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingTop="10dp"
      android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finish_date_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="viewEnd"
            android:textSize="18sp" />

  </LinearLayout>
  <LinearLayout
        android:id="@+id/timeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

      <TextView
          android:id="@+id/textView4"
          android:layout_width="80dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/finish_time_label"
          android:textSize="18sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/timeTextView"
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:textAlignment="viewEnd"
          android:textSize="18sp" />

  </LinearLayout>

</LinearLayout>
